--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,14 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.85"
+mongodb = "2.3.1"
+dotenv = "0.15.0"
+env_logger = "0.10.0"
+hmac-sha512 = "1.1.4"
+sha-crypt = "0.4.0"
+jsonwebtoken = "8.2.0"
+chrono = "0.4.23"
+futures-util = "0.3.25"
+regex = "1"
