--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,6 @@ futures-util = "0.3.25"
 regex = "1"
 actix-cors = "0.6.4"
 actix-multipart = "0.5.0"
-actix-form-data = "0.6.2"
+image = "0.24.5"
+bytes = "1.4.0"
+rand = "0.8.5"
